# FINCH-Optics

./: BrokeTran.py  README.md  background_reflectance.py  config.py  plots_config.py  print_config.py  snr_equations.py  snr_equations_for_plotting.py  snr_main.py  snr_plots.py
Modtran_Graphs/: modtran_orbit_params.csv
Modtran_Graphs/Graphs + Series (Res=0.002)/: MODTRAN_SERIES_DATA_Flux_Scenario_0_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Flux_Scenario_1_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Flux_Scenario_2_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Flux_Scenario_3_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Radiance_Scenario_0_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Radiance_Scenario_1_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Radiance_Scenario_2_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Radiance_Scenario_3_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Transmittance_Scenario_0_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Transmittance_Scenario_2_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Transmittance_Scenario_3_Jun-13-2021.npy
Modtran_Graphs/Graphs + Series (Res=0.003)/: MODTRAN_SERIES_DATA_Flux_Scenario_0_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Flux_Scenario_1_Jun-13-2021.npy  MODTRAN_SERIES_DATA_Flux_Scenario_2_Jun-13-2021.npy  (+8 more)
SNR_v1/: config.py  plots_config.py  print_config.py  snr_equations.py  snr_equations_for_plotting.py  snr_main.py  snr_plots.py
SNR_v1/Broketran/: BrokeTran.py  (+1 more)
slit_width_tradeoff/: slit_width_braden.ipynb  spectral_resolution_vs_slit_width_javail.ipynb
system_optimizer/: README.md  pyproject.toml  sys_optim.sh
system_optimizer/src/: config.py  diffraction.py  foreoptics.py  main.py
(+22 files in other folders)
